--- a/WebdriverTest/pom.xml
+++ b/WebdriverTest/pom.xml
@@ -3,17 +3,52 @@
   <groupId>WebdriverTest</groupId>
   <artifactId>WebdriverTest</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <properties>
+  <suiteXmlFile>testng.xml</suiteXmlFile>
+  </properties>
+  
   <dependencies>
+  
   	<dependency>
   		<groupId>org.seleniumhq.selenium</groupId>
   		<artifactId>selenium-java</artifactId>
   		<version>2.45.0</version>
   	</dependency>
+  	
   	<dependency>
   		<groupId>org.testng</groupId>
   		<artifactId>testng</artifactId>
   		<version>6.8</version>
   		<scope>test</scope>
   	</dependency>
+  	
   </dependencies>
+  
+  <build>
+  <plugins>  
+  
+   <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+        <compilerVersion>1.8</compilerVersion>
+        <source>1.6</source>
+        <target>1.6</target>
+        </configuration>
+        </plugin>
+  
+  <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.12.4</version>
+        <configuration>
+        <suiteXmlFiles>
+        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+        </suiteXmlFiles>
+        </configuration> 
+      </plugin>
+      </plugins>
+      </build>
 </project>
